# Intelligent-Environment-Governance-Hub

./: .gitignore  README.md  START_COMMANDS.txt  start-all.bat
back-end-python/: .env.example  .gitignore  README.md  app.py  check_python_deps.py  download_tiktoken.py  main.py  pyproject.toml  requirement.txt
back-end-python/.claude/: settings.local.json
back-end-python/advanced/: __init__.py  conversational_rag.py  hybrid_retriever.py
back-end-python/data/knowledge/: 垃圾分类指南.txt  环境保护基础知识.txt  节能减排小知识.txt
back-end-python/docs/learning/: Agent完整流程与应用指南.md  LangChain_JSON格式输出优化方案.md  RAG开发指南.md  Tools开发指南_优化版_LangChain1补丁.md  Tools开发指南_优化版_最终版.md  task_solution_checklist.md  项目学习路径与架构梳理.md  高级Agent开发指南.md
back-end-python/examples/: demo_advanced_agent.py  demo_agent.py  demo_complete_agent.py  demo_json_extractor.py
back-end-python/spider/: README.md  __init__.py  db.py  raw_store.py
back-end-python/spider/aqi/: __init__.py  aqi_aggregated_spider.py  aqi_city_rank_spider.py  aqi_history_ext_spider.py  aqi_history_spider.py  aqi_live_spider.py  aqi_realtime_spider.py  aqi_search_spider.py
back-end-python/spider/city/: city_aqi_spider.py
back-end-python/spider/company/: company_monitor_spider.py
back-end-python/spider/news/: env_news_spider.py
back-end-python/spider/water/: water_quality_spider.py
back-end-python/spider/weather/: weather_history_spider.py
back-end-python/src/: __init__.py  advanced_agent.py  agent.py  complete_agent.py  config.py  document_processor.py  json_output.py  rag_chain.py  reflection.py  state_manager.py  vectorstore.py
back-end-python/src/agents/: __init__.py  (+1 more)
back-end-python/tests/: demo_robust_parser.py  test_advanced_agent.py  test_structureOutputAgent.py  test_tools.py  test_validators.py  tool_chain_test.py
back-end-python/tools/: __init__.py  advanced_tools.py  api_tools.py  basic_tools.py  demo_tool_loop.py  error_handling.py  live_env_tools.py  rag_tools.py  schemas.py  structured_tools.py  tool_chain.py  tool_integration.py  validation.py
(+230 files in other folders)
